use local jquery.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>TCGPear</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
+		<script src="./jquery.js"></script>
 		<script src="./main.js"></script>
 		<link rel="stylesheet" type="text/css" href="./styles.css">
 	</head>
