begin adding update/drop player menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<td id="notif">Last saved: never</td>
 			</tr>
 		</table>
+
 		<div id="main">
 			<div id="tabEvent" class="tab">
 				Number of Rounds:
@@ -42,6 +43,18 @@
 			</div>
 			<div id="tabStandings" class="tab hidden">
 				
+			</div>
+		</div>
+
+		<div id="editPlayer">
+			<div class="inner">
+				<center><b>Update Player</b></center><br />
+				First Name: <input type="text" id="editPlayerFirstName"><br class="tall" />
+				Last Name: <input type="text" id="editPlayerLastName"><br class="tall" />
+				<center>
+					<input type="button" value="Update Info" id="bUpdatePlayer">
+					<input type="button" value="Drop Player" id="bDropPlayer">
+				</center>
 			</div>
 		</div>
 
