finish styling update/drop player popup

--- a/index.html
+++ b/index.html
@@ -48,13 +48,17 @@
 
 		<div id="editPlayer">
 			<div class="inner">
-				<center><b>Update Player</b></center><br />
+				<center><b>Update Player</b></center>
+				<div class="spacer1"></div>
 				First Name: <input type="text" id="editPlayerFirstName"><br class="tall" />
 				Last Name: <input type="text" id="editPlayerLastName"><br class="tall" />
+				<div class="spacer1"></div>
 				<center>
 					<input type="button" value="Update Info" id="bUpdatePlayer">
+					&nbsp;
 					<input type="button" value="Drop Player" id="bDropPlayer">
 				</center>
+				<div id="cancelEdit"><input type="button" value="X" id="bCancelEdit"></div>
 			</div>
 		</div>
 
