add functionality to update/drop player buttons

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			<div class="inner">
 				<center><b>Update Player</b></center>
 				<div class="spacer1"></div>
+				<input type="hidden" id="editPlayerID">
 				First Name: <input type="text" id="editPlayerFirstName"><br class="tall" />
 				Last Name: <input type="text" id="editPlayerLastName"><br class="tall" />
 				<div class="spacer1"></div>
