add button to close session

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<td><input type="button" id="bTab3" class="tabButton" value="Round"></td>
 				<td><input type="button" id="bTab4" class="tabButton" value="Standings"></td>
 				<td id="notif">Last saved: never</td>
+				<td id="closeSession"><input type="button" id="bCloseSession" value="Close Session"></td>
 			</tr>
 		</table>
 
