--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
 
 		<div id="main">
 			<div id="tabEvent" class="tab">
-				Number of Rounds:
-				<select id="numRounds">
-				</select>
+				Event Name: <input type="text" id="eventName"><br class="tall" />
+				Number of Rounds: <select id="numRounds"></select><br class="tall" />
+				Match Type:
+				<select id="matchType">
+					<option value="0">1v1</option>
+					<option value="1">Free-for-All</option>
+					<option value="2">Teams</option>
+				</select><br class="tall" />
+				<div id="defaultTeamPodSize">
+					Default Team/Pod Size: <select id="podSize"></select>
+				</div>
 			</div>
 			<div id="tabPlayers" class="tab hidden">
 				<table><tr>
@@ -40,7 +48,10 @@
 				</tr></table>
 			</div>
 			<div id="tabRound" class="tab hidden">
-				
+				<div id="roundStep1">
+					<input type="button" value="Create Matches">
+					<input type="button" value="Create Matches Manually">
+				</div>
 			</div>
 			<div id="tabStandings" class="tab hidden">
 				
