update jQuery and fix closeSession()

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</tr>
 		</table>
 
-		<div id="main">
+		<div id="main"><form id="mainForm">
 			<div id="tabEvent" class="tab">
 				Event Name: <input type="text" id="eventName"><br class="tall" />
 				Number of Rounds: <select id="numRounds"></select><br class="tall" />
@@ -56,7 +56,7 @@
 			<div id="tabStandings" class="tab hidden">
 				
 			</div>
-		</div>
+		</form></div>
 
 		<div id="editPlayer">
 			<div class="inner">
