add functionality to display pairings

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
 					<input type="button" id="bCreatePairings" value="Create Pairings">
 					<input type="button" id="beCreatePairingsManual" value="Create Pairings Manually">
 				</div>
+				<br class="tall" />
+				<table id="pairings" border="1">
+					<tr>
+						<th>Table #</th>
+						<th>Player 1</th>
+						<th>Player 1 Result</th>
+						<th>Player 2</th>
+						<th>Player 2 Result</th>
+					</tr>
+				</table>
 			</div>
 
 			<div id="tabStandings" class="tab hidden">
