--- a/index.html
+++ b/index.html
@@ -56,15 +56,9 @@
 					<input type="button" id="beCreatePairingsManual" value="Create Pairings Manually">
 				</div>
 				<br class="tall" />
-				<table id="pairings" border="1">
-					<tr>
-						<th>Table #</th>
-						<th>Player 1</th>
-						<th>Player 1 Result</th>
-						<th>Player 2</th>
-						<th>Player 2 Result</th>
-					</tr>
-				</table>
+				<table id="pairings" border="1"></table>
+				<br class="tall" />
+				<table id="reportResults"></table>
 			</div>
 
 			<div id="tabStandings" class="tab hidden">
