change blue buttons to red

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 						<td rowspan="2" class="tReportResult"><button class="bReportResult">1<br />1</button></td>
 						<td rowspan="2" class="tReportResult"><button class="bReportResult">1<br />0</button></td>
 						<td rowspan="2" class="tReportResult"><button class="bReportResult">0<br />0</button></td>
+						<td rowspan="2" class="tReportResult"><button class="bReportResult">0<br />1</button></td>
+						<td rowspan="2" class="tReportResult"><button class="bReportResult">1<br />2</button></td>
+						<td rowspan="2" class="tReportResult"><button class="bReportResult">0<br />2</button></td>
 					</tr>
 					<tr>
 						<td id="reportName2">Player 2</td>
