make popup prettier

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 		</form></div>
 
 		<div id="editPlayer">
+			<div class="popupHeader">Update Player</div>
 			<div class="inner">
-				<center><b>Update Player</b></center>
 				<div class="spacer1"></div>
 				<input type="hidden" id="editPlayerID">
 				First Name: <input type="text" id="editPlayerFirstName"><br class="tall" />
@@ -99,8 +99,8 @@
 					&nbsp;
 					<input type="button" value="Drop Player" id="bDropPlayer">
 				</center>
-				<div id="cancelEdit"><input type="button" value="X" id="bCancelEdit"></div>
 			</div>
+			<div id="cancelEdit"><input type="button" value="X" id="bCancelEdit"></div>
 		</div>
 
 		<script type="text/javascript">
