begin implementing reporting of results

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 					<tr>
 						<td id="reportName1">Player 1</td>
 						<td><input type="number" id="reportNum1" value="0"></td>
-						<td rowspan="2" class="tReportResult"><button class="bReportResult">2<br />0</button></td>
-						<td rowspan="2" class="tReportResult"><button class="bReportResult">2<br />1</button></td>
-						<td rowspan="2" class="tReportResult"><button class="bReportResult">1<br />1</button></td>
-						<td rowspan="2" class="tReportResult"><button class="bReportResult">1<br />0</button></td>
-						<td rowspan="2" class="tReportResult"><button class="bReportResult">0<br />0</button></td>
-						<td rowspan="2" class="tReportResult"><button class="bReportResult">0<br />1</button></td>
-						<td rowspan="2" class="tReportResult"><button class="bReportResult">1<br />2</button></td>
-						<td rowspan="2" class="tReportResult"><button class="bReportResult">0<br />2</button></td>
+						<td rowspan="2" class="tReportResult"><button type="button" id="bRep0" class="bReportResult">2<br />0</button></td>
+						<td rowspan="2" class="tReportResult"><button type="button" id="bRep1" class="bReportResult">2<br />1</button></td>
+						<td rowspan="2" class="tReportResult"><button type="button" id="bRep2" class="bReportResult">1<br />1</button></td>
+						<td rowspan="2" class="tReportResult"><button type="button" id="bRep3" class="bReportResult">1<br />0</button></td>
+						<td rowspan="2" class="tReportResult"><button type="button" id="bRep4" class="bReportResult">0<br />0</button></td>
+						<td rowspan="2" class="tReportResult"><button type="button" id="bRep5" class="bReportResult">0<br />1</button></td>
+						<td rowspan="2" class="tReportResult"><button type="button" id="bRep6" class="bReportResult">1<br />2</button></td>
+						<td rowspan="2" class="tReportResult"><button type="button" id="bRep7" class="bReportResult">0<br />2</button></td>
 					</tr>
 					<tr>
 						<td id="reportName2">Player 2</td>
