Added parcel and npm scripts

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>TCGPear</title>
-		<script src="./jquery.js"></script>
-		<script src="./misc.js"></script>
-		<script src="./main.js"></script>
 		<link rel="stylesheet" type="text/css" href="./styles.css">
 	</head>
 	<body>
@@ -103,8 +100,6 @@
 			<div id="cancelEdit"><input type="button" value="X" id="bCancelEdit"></div>
 		</div>
 
-		<script type="text/javascript">
-			init();
-		</script>
+		<script src="index.js"></script>
 	</body>
 </html>
