begin recreating header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="./styles.css">
 	</head>
 	<body>
-		<table id="header">
+		<div id="main"></div>
+
+		<!--<table id="header">
 			<tr id="headings">
 				<td><input type="button" id="bTab1" class="tabButton select" value="Event Info"></td>
 				<td><input type="button" id="bTab2" class="tabButton" value="Players"></td>
@@ -79,7 +81,7 @@
 			</div>
 
 			<div id="tabStandings" class="tab hidden">
-				
+
 			</div>
 		</form></div>
 
@@ -98,7 +100,7 @@
 				</center>
 			</div>
 			<div id="cancelEdit"><input type="button" value="X" id="bCancelEdit"></div>
-		</div>
+		</div>-->
 
 		<script src="index.js"></script>
 	</body>
