begin implementing event window/tab

--- a/index.html
+++ b/index.html
@@ -5,19 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="./styles.css">
 	</head>
 	<body>
-		<div id="main"></div>
+		<div id="root"></div>
 
-		<!--<table id="header">
-			<tr id="headings">
-				<td><input type="button" id="bTab1" class="tabButton select" value="Event Info"></td>
-				<td><input type="button" id="bTab2" class="tabButton" value="Players"></td>
-				<td><input type="button" id="bTab3" class="tabButton" value="Round"></td>
-				<td><input type="button" id="bTab4" class="tabButton" value="Standings"></td>
-				<td id="notif">Last saved: never</td>
-				<td id="closeSession"><input type="button" id="bCloseSession" value="Close Session"></td>
-			</tr>
-		</table>
-
+		<!--
 		<div id="main"><form id="mainForm">
 			<div id="tabEvent" class="tab">
 				Event Name: <input type="text" id="eventName"><br class="tall" />
