first gh-pages build

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="utf-8">
 		<title>TCGPear</title>
-		<link rel="stylesheet" type="text/css" href="./styles.css">
+		<link rel="stylesheet" type="text/css" href="30fea96ba1d6692bfb5cb2126edf290d.css">
 	</head>
 	<body>
 		<div id="root"></div>
@@ -12,6 +12,6 @@
 			</div>
 		-->
 
-		<script src="index.js"></script>
+		<script src="tcgpear.js"></script>
 	</body>
 </html>
